# shadow-nft-standard

./: .gitignore  Anchor.toml  CODEOWNERS  CODE_OF_CONDUCT.MD  Cargo.toml  README.md
.github/: pull_request_template.md
apps/sample-ui/: .env  .env.example  .gitignore  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
apps/sample-ui/components/: icons.tsx  main-nav.tsx  site-header.tsx  theme-provider.tsx  theme-toggle.tsx
apps/sample-ui/components/ui/: alert-dialog.tsx  button.tsx  connect-wallet-button.tsx  input.tsx  select.tsx  spinner.tsx
apps/sample-ui/config/: site.ts
apps/sample-ui/contexts/: AutoConnectProvider.tsx  ContextProvider.tsx  NetworkConfigurationProvider.tsx
apps/sample-ui/lib/: getParsedNftAccountsByOwner.ts  minter-idl.ts  standard-idl.ts  utils.ts
apps/sample-ui/lib/shadow-nft-standard/accounts/: Collection.ts  CreatorGroup.ts  Metadata.ts  index.ts
apps/sample-ui/lib/shadow-nft-standard/instructions/: burn.ts  createCollection.ts  createGroup.ts  createMetadataAccount.ts  index.ts  mintNft.ts  updateMetadata.ts
apps/sample-ui/lib/shadow-nft-standard/types/: CreateMetaArgs.ts  Symbol.ts  SymbolError.ts  UpdateMetaArgs.ts
apps/sample-ui/lib/shadowy-super-minter/: programId.ts
apps/sample-ui/lib/shadowy-super-minter/accounts/: PayerPda.ts  ShadowySuperMinter.ts  index.ts
apps/sample-ui/lib/shadowy-super-minter/errors/: custom.ts
apps/sample-ui/lib/shadowy-super-minter/instructions/: addAssets.ts  index.ts  initialize.ts  mint.ts
apps/sample-ui/lib/shadowy-super-minter/types/: Asset.ts  AssetType.ts  CreateCollectionArgs.ts  CreateGroupArgs.ts  InitializeArgs.ts  Prefix.ts  UniformMint.ts  Url.ts  index.ts
apps/sample-ui/pages/: _app.tsx  _document.tsx  index.tsx
apps/sample-ui/pages/create/: index.tsx
apps/sample-ui/pages/manage-collections/: index.tsx
apps/sample-ui/pages/manage-creator-groups/: index.tsx
apps/sample-ui/pages/mint/: index.tsx
apps/sample-ui/pages/wallet/: index.tsx
apps/sample-ui/pages/wallet/[id]/: index.tsx
apps/sample-ui/public/: robots.txt
apps/sample-ui/styles/: globals.css
common/: Cargo.toml
common/src/: array_from_fn.rs  lib.rs  payer_pda.rs  program_ids.rs
docs/: README.md  faqs.md
docs/programs/: metadata.md  minter.md
docs/sample-ui/: quick-start.md
js-generated-client/: package.json  tsconfig.tsbuildinfo
js-generated-client/src/shadow-nft-standard/: index.ts  programId.ts
js-generated-client/src/shadow-nft-standard/accounts/: Collection.ts  CreatorGroup.ts  Metadata.ts
js-generated-client/src/shadow-nft-standard/errors/: custom.ts
js-generated-client/src/shadow-nft-standard/instructions/: burn.ts  createCollection.ts  createGroup.ts  createMetadataAccount.ts  mintNft.ts  updateMetadata.ts
js-generated-client/src/shadow-nft-standard/types/: CreateCollectionArgs.ts  CreateMetaArgs.ts  Symbol.ts  SymbolError.ts  UpdateMetaArgs.ts  Url.ts  index.ts
js-generated-client/src/shadowy-super-minter/: minterProgramId.ts
js-generated-client/src/shadowy-super-minter/accounts/: PayerPda.ts  ShadowySuperMinter.ts
js-generated-client/src/shadowy-super-minter/errors/: anchor.ts  custom.ts  index.ts
js-generated-client/src/shadowy-super-minter/instructions/: addAssets.ts  initialize.ts  mint.ts
js-generated-client/src/shadowy-super-minter/types/: Asset.ts  AssetType.ts  CreateGroupArgs.ts  InitializeArgs.ts  Prefix.ts  UniformMint.ts
programs/shadow-nft-standard/: Cargo.toml
programs/shadow-nft-standard/src/: error.rs  lib.rs
programs/shadow-nft-standard/src/common/: collection.rs  creator_group.rs  metadata.rs  mod.rs  token_2022.rs  url.rs
programs/shadow-nft-standard/src/instructions/: burn.rs  create.rs  create_collection.rs  create_group.rs  mint.rs  mod.rs  update.rs  withdraw.rs
programs/shadowy-super-minter/: Cargo.toml  README.md
programs/shadowy-super-minter/src/: errors.rs  lib.rs
programs/shadowy-super-minter/src/instructions/: add_assets.rs  initialize.rs  mint.rs  mod.rs
programs/shadowy-super-minter/src/state/: associated_token.rs  file_type.rs  mod.rs  nonuniform_mint.rs  shadowy_super_minter_account.rs  uniform_mint.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
sdk/src/minter_program/: init.rs  mint.rs  mod.rs
sdk/src/standard_program/: create_collection.rs  create_group.rs  create_meta_and_mint.rs  mod.rs
unit_tests/: Cargo.toml
unit_tests/src/: lib.rs  minter.rs  unit.rs  zk.rs
zerocopy-bitslice/: Cargo.toml
zerocopy-bitslice/examples/: minter.rs
zerocopy-bitslice/src/: lib.rs
zerocopy-str/: Cargo.toml
zerocopy-str/examples/: borsh_comparison.rs  repr.rs  str_enum.rs
zerocopy-str/src/: lib.rs
