# Note: specifying inheritance is still necessary until cargo-sbf > 1.64 during `anchor test`
cargo-features = ["workspace-inheritance"]

[package]
name = "shadowy-super-minter"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadowy_super_minter"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
arrayref = "0.3.6"
solana-program = { workspace = true }
spl-associated-token-account = { version = "1.1.3", features = ["no-entrypoint"]}
spl-token-2022 = { version = "=0.6.1", features = ["no-entrypoint"], default-features = false }
anchor-spl = { version = "0.27.0", default-features = false, features = ["token", "associated_token"] }
toml_datetime = "=0.6.1"
shadow-nft-common.workspace = true
shadow-nft-standard = { path = "../shadow-nft-standard", features = ["no-entrypoint", "cpi"] }
winnow = "=0.4.1"
zerocopy-bitslice = { workspace = true }
zerocopy-str = { workspace = true }

[dev-dependencies]
solana-program-test = "=1.14.18"
solana-sdk = "=1.14.18"
